--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -19,7 +19,7 @@ jobs:
           node-version: 18
       - run: npm i
       - run: npm run lint
-      - run: npm run tsc
+      - run: npm run build
       - run: npx semantic-release
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
