--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -19,7 +19,8 @@ jobs:
           node-version: 18
       - run: npm i
       - run: npm run lint
-      - run: npm run build
+      - name: tsc compile
+        uses: iCrawl/action-tsc@v1
       - run: npx semantic-release
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
