--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "removeComments": false,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "rootDirs": "src",
+    "rootDir": "src",
     "outDir": "dist",
     "skipLibCheck": true
   },
