--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -21,8 +21,10 @@ jobs:
         run: npm i
       - name: Lint check
         run: npm run lint
+      - name: Build package
+        run: npm run build
       - name: release
-        run: ls && npm run build && npx semantic-release
+        run: npx semantic-release
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
           GH_TOKEN: ${{secrets.GH_TOKEN}}
