--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -10,21 +10,28 @@ on:
       - master
 
 jobs:
-  publish-npm:
-    runs-on: ubuntu-20.04
+  lint-check:
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+        with:
+          node-version: 16
+          registry-url: https://registry.npmjs.org/
+      - run: npm i
+      - run: npm run lint
+
+  publish-npm:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
         with:
           node-version: 18
-      - name: Install deps
-        run: npm i
-      - name: Lint check
-        run: npm run lint
-      - name: Build package
-        run: npm run build
-      - name: release
-        run: npx semantic-release
+          registry-url: https://registry.npmjs.org/
+      - run: npm i
+      - run: npm run tsc
+      - run: npx semantic-release
         env:
-          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+          NODE_AUTH_TOKEN: ${{secrets.npm_token}}
           GH_TOKEN: ${{secrets.GH_TOKEN}}
