--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -31,7 +31,9 @@ jobs:
           registry-url: https://registry.npmjs.org/
       - name: Run tests
         working-directory: ./test
-        run: npm i & ls & npm run test
+        run: |
+          npm i
+          npm run test
 
   publish-npm:
     runs-on: ubuntu-latest
@@ -41,6 +43,8 @@ jobs:
         with:
           node-version: 18
           registry-url: https://registry.npmjs.org/
+      - name: Run tests
+        working-directory: ./
       - run: npm i
       - run: npm run tsc
       - run: npx semantic-release
