--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -13,7 +13,7 @@ jobs:
   lint-check:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - uses: actions/setup-node@v2
         with:
           node-version: 16
@@ -21,33 +21,27 @@ jobs:
       - run: npm i
       - run: npm run lint
 
-  test:
+  publish-npm:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - uses: actions/setup-node@v2
         with:
-          node-version: 16
+          node-version: 18
           registry-url: https://registry.npmjs.org/
+      - name: Build
+        run: |
+          npm i
+          npm run tsc
       - name: Run tests
         working-directory: ./test
         run: |
           npm i
           npm run test
-
-  publish-npm:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
-        with:
-          node-version: 18
-          registry-url: https://registry.npmjs.org/
-      - name: Publishment
-        working-directory: ./
+      - name: Publish
+        working-directory: .
         run: |
           npm i
-          npm run tsc
           npx semantic-release
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
